fixed strike-through deal

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="stats">
       <ul>
         <li>Total:</li>
-        <li>Complete</li>
+        <li>Complete:</li>
         <li>Incomplete:</li>
       </ul>
     </div>
