--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </form>
     <ul class="todos">
     </ul>
+    <form class="delete-em">
+      <input type="submit" value="remove all completed items" />
+    </form>
     <div class="stats">
       <ul>
         <li>Total:</li>
